# ChangeLog for net-libs/gsoap
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/gsoap/ChangeLog,v 1.31 2014/09/07 11:44:11 polynomial-c Exp $

*gsoap-2.8.18 (07 Sep 2014)

  07 Sep 2014; Lars Wendler <polynomial-c@gentoo.org> -gsoap-2.8.15.ebuild,
  -gsoap-2.8.16.ebuild, +gsoap-2.8.18.ebuild,
  -files/gsoap-2.7.15-use_libtool.patch, -files/gsoap-2.7-fedora-openssl.patch:
  Version bump. Removed old.

*gsoap-2.8.17 (10 Dec 2013)

  10 Dec 2013; Patrick Lauer <patrick@gentoo.org> +gsoap-2.8.17.ebuild:
  Bump

  18 Oct 2013; Lars Wendler <polynomial-c@gentoo.org> +gsoap-2.8.12.ebuild:
  Readded gsoap-2.8.12 as this is the last version working with
  app-emulation/virtualbox[vboxwebsrv] (bug #456354).

  20 Sep 2013; Lars Wendler <polynomial-c@gentoo.org> -gsoap-2.8.14.ebuild:
  Removed old.

*gsoap-2.8.16 (04 Sep 2013)

  04 Sep 2013; Patrick Lauer <patrick@gentoo.org> +gsoap-2.8.16.ebuild:
  Bump

*gsoap-2.8.15 (15 May 2013)

  15 May 2013; Patrick Lauer <patrick@gentoo.org> +gsoap-2.8.15.ebuild:
  Bump

  10 May 2013; Lars Wendler <polynomial-c@gentoo.org> -gsoap-2.8.9.ebuild,
  -gsoap-2.8.10.ebuild, -gsoap-2.8.11.ebuild, -gsoap-2.8.12.ebuild,
  -gsoap-2.8.13.ebuild, gsoap-2.8.14.ebuild:
  Fixed configure.in for >=automake-1.13 (bug #468264). Removed old versions.

  17 Mar 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add proxy-maintainers to metadata.xml

*gsoap-2.8.14 (22 Feb 2013)

  22 Feb 2013; Patrick Lauer <patrick@gentoo.org> +gsoap-2.8.14.ebuild:
  Bump

*gsoap-2.8.13 (29 Jan 2013)

  29 Jan 2013; Patrick Lauer <patrick@gentoo.org> +gsoap-2.8.13.ebuild:
  Bump

*gsoap-2.8.12 (11 Jan 2013)

  11 Jan 2013; Patrick Lauer <patrick@gentoo.org> +gsoap-2.8.12.ebuild:
  Bump

*gsoap-2.8.11 (19 Oct 2012)

  19 Oct 2012; Patrick Lauer <patrick@gentoo.org> +gsoap-2.8.11.ebuild:
  Bump

*gsoap-2.8.10 (23 Aug 2012)

  23 Aug 2012; Patrick Lauer <patrick@gentoo.org> +gsoap-2.8.10.ebuild,