@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/gsoap
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/gsoap/ChangeLog,v 1.31 2014/09/07 11:44:11 polynomial-c Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/gsoap/ChangeLog,v 1.32 2014/11/17 07:19:25 patrick Exp $
+
+*gsoap-2.8.19 (17 Nov 2014)
+
+  17 Nov 2014; Patrick Lauer <patrick@gentoo.org> +gsoap-2.8.19.ebuild:
+  Bump
 
 *gsoap-2.8.18 (07 Sep 2014)
 
